# threemica

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
src/threemica/: __init__.py  _resources.py  _scope.py  _smoothing.py  _wizard.py  builder.py  cli.py  core.py  resample.py
src/threemica/data/: threemica_scope.example.json
src/threemica/data/yba_micapipe/medial_wall/: medial_wall_fsLR-32k_lh.npy  medial_wall_fsLR-32k_rh.npy  medial_wall_fsLR-5k_lh.npy  medial_wall_fsLR-5k_rh.npy
src/threemica/data/yba_micapipe/parcellations/: yale-696_conte69_lh.label.gii  yale-696_conte69_rh.label.gii  yale-696_fsLR-5k_lh.label.gii  yale-696_fsLR-5k_rh.label.gii
src/threemica/viewer/: template.html  viewer.js
tests/: conftest.py  test_build.py  test_builder.py  test_cli.py  test_e2e.py  test_resample.py  test_resolve_root.py  test_resources.py  test_run_interactive.py  test_run_scripted.py  test_scan.py  test_scope.py  test_smoke.py  test_smoothing.py
